fix: content-box topic spacing

--- a/packages/components/base/source/2-molecules/content-box/_content-box-vars.scss
+++ b/packages/components/base/source/2-molecules/content-box/_content-box-vars.scss
@@ -8,6 +8,6 @@ $topic: (
     font: var(--c-content-box_topic--font-m),
     font-weight: var(--g-topic--font-weight),
     color: var(--g-topic--color),
-    margin: var(--g-headline--margin),
+    margin: 0 0 0.5em,
   ),
 ) !default;
